Fix bugs GH-12 and GH-14